Updated SeriesParser with intermediate AST model and replaced legacy RawTreeParser for exposures.
Also
 * Use ASTNodes instead of MarkedUpNode. Change parser/transformers so
that named elements ISeries are linked to the to curve type rather than
an abstract NamedElement.